--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-GA-production.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-GA-production.yaml
@@ -33,7 +33,6 @@ tests:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
       API_HOST: production
       COMPUTE_MACHINE_TYPE: g4dn.2xlarge
-      FIPS: "true"
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-435"},
@@ -45,6 +44,7 @@ tests:
         ]
       FIREWATCH_DEFAULT_JIRA_PROJECT: MSINTEROP
       FIREWATCH_JIRA_API_TOKEN_PATH: /tmp/secrets/jira/access_token_msi
+      FIREWATCH_JIRA_SERVER: https://issues.redhat.com
       OPENSHIFT_VERSION: "4.13"
       OPERATOR1_CONFIG: name=gpu-operator-certified;namespace=nvidia-gpu-operator;source=certified-operators;target-namespaces=nvidia-gpu-operator,
       OPERATOR2_CONFIG: name=servicemeshoperator
@@ -54,9 +54,14 @@ tests:
       PARALLEL: "false"
       REPLICAS: "2"
       ROSA_LOGIN_ENV: production
+    pre:
+      - ref: operator-install
+      - ref: addon-install
+    post:
+      - ref : firewatch-report-issues
     test:
     - ref: addon-tests-rhods
-    workflow: addons-and-operators-aws-rosa
+    workflow: rosa-aws-sts
 - as: smoke-osd-rhods-addon-baseline-fips
   cron: 0 12 * * 6
   steps:
@@ -66,7 +71,6 @@ tests:
       API_HOST: production
       COMPUTE_MACHINE_TYPE: g4dn.2xlarge
       COMPUTE_NODES: "2"
-      FIPS: "true"
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-436"},
@@ -78,6 +82,7 @@ tests:
         ]
       FIREWATCH_DEFAULT_JIRA_PROJECT: MSINTEROP
       FIREWATCH_JIRA_API_TOKEN_PATH: /tmp/secrets/jira/access_token_msi
+      FIREWATCH_JIRA_SERVER: https://issues.redhat.com
       MULTI_AZ: "false"
       OCM_LOGIN_ENV: production
       OPENSHIFT_VERSION: "4.13"
@@ -87,9 +92,14 @@ tests:
       OPERATOR4_CONFIG: name=openshift-pipelines-operator-rh;namespace=openshift-pipelines;channel=latest
       OPERATOR5_CONFIG: name=nfd;namespace=openshift-nfd;target-namespaces=openshift-nfd,
       PARALLEL: "false"
+    pre:
+      - ref: operator-install
+      - ref: addon-install
+    post:
+      - ref : firewatch-report-issues
     test:
     - ref: addon-tests-rhods
-    workflow: addons-and-operators-aws-osd
+    workflow: osd-ccs-aws-fips
 zz_generated_metadata:
   branch: rhods-addon-interop
   org: CSPI-QE
