--- a/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall-periodics.yaml
+++ b/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall-periodics.yaml
@@ -85,7 +85,7 @@ periodics:
     ci-operator.openshift.io/cloud-cluster-profile: aws-managed-cspi-qe
     job-release: "4.13"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-cluster-install-uninstall-aws-ipi-4-13-ci-trigger
+  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-multi-cluster-install-uninstall-trigger
   spec:
     containers:
     - args:
@@ -94,12 +94,16 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/cluster-install-uninstall-aws-ipi-4-13-ci-cluster-profile
-      - --target=cluster-install-uninstall-aws-ipi-4-13-ci
+      - --secret-dir=/usr/local/multi-cluster-install-uninstall-cluster-profile
+      - --target=multi-cluster-install-uninstall
       command:
       - ci-operator
       env:
       - name: CLUSTER1_CONFIG
+      - name: CLUSTER2_CONFIG
+      - name: CLUSTER3_CONFIG
+      - name: CLUSTER4_CONFIG
+      - name: CLUSTER5_CONFIG
       - name: OCM_ENVIRONMENT
         value: stage
       - name: PARALLEL
