--- a/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
+++ b/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
@@ -81,6 +81,7 @@ tests:
       resources:
         requests:
           cpu: 100m
+    workflow: generic-claim
 zz_generated_metadata:
   branch: master
   org: app-sre
