--- a/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
@@ -78,6 +78,20 @@ tests:
           cpu: 100m
           memory: 200Mi
     workflow: openshift-e2e-gcp-ovn
+- always_run: false
+  as: e2e-telco5g-cnftests-sriov
+  steps:
+    env:
+      E2E_TESTS_CONFIG: |
+        CNF_E2E_TESTS=true
+        CNF_ORIGIN_TESTS=false
+        FEATURES=sriov
+      T5CI_JOB_TYPE: cnftests
+      T5CI_VERSION: "4.14"
+    observers:
+      enable:
+      - observers-resource-watch
+    workflow: telco5g-cnf
 - as: e2e-aws-ran-profile
   optional: true
   steps:
