--- a/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
+++ b/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
@@ -42,10 +42,6 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: unit
-  commands: make test
-  container:
-    from: src
 - as: kepler-operator-e2e
   cluster_claim:
     architecture: amd64
@@ -60,8 +56,10 @@ tests:
       cli: latest
       commands: |
         operator-sdk run bundle -n openshift-operators "$OO_BUNDLE"
-        oc wait --for condition=Available -n openshift-operators --timeout=300s deployment kepler-operator-controller-manager
-        oc logs -n openshift-operators deployment/kepler-operator-controller-manager
+        oc wait --for condition=Available -n openshift-operators \
+        --timeout=300s deployment kepler-operator-controller-manager
+        oc logs -n openshift-operators \
+        deployment/kepler-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: kepler-bundle
