--- a/ci-operator/config/red-hat-data-services/caikit-tgis-serving/red-hat-data-services-caikit-tgis-serving-rhods-1.32.yaml
+++ b/ci-operator/config/red-hat-data-services/caikit-tgis-serving/red-hat-data-services-caikit-tgis-serving-rhods-1.32.yaml
@@ -24,8 +24,8 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: nightly-image-mirror
-  cron: 0 0 1 * * ?
+- as: stable-image-mirror
+  postsubmit: true
   steps:
     dependencies:
       SOURCE_IMAGE_REF: caikit-tgis-serving
