--- a/ci-operator/config/red-hat-data-services/text-generation-inference/red-hat-data-services-text-generation-inference-rhods-1.32.yaml
+++ b/ci-operator/config/red-hat-data-services/text-generation-inference/red-hat-data-services-text-generation-inference-rhods-1.32.yaml
@@ -24,8 +24,8 @@ resources:
       cpu: "20"
       memory: 16Gi
 tests:
-- as: nightly-image-mirror
-  cron: 0 0 1 * * ?
+- as: stable-image-mirror
+  postsubmit: true
   steps:
     dependencies:
       SOURCE_IMAGE_REF: text-generation-inference
