--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -3366,8 +3366,8 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-agent-vsphere-install-sno
-- as: vsphere-ipi-compact-f14
-  cron: 23 3 14,29 * *
+- as: vsphere-ipi-compact-f28
+  cron: 42 10 22 * *
   steps:
     cluster_profile: vsphere-connected
     env:
@@ -3377,8 +3377,20 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi
-- as: vsphere-ipi-disconnected-registry-pvc-f14
-  cron: 38 13 2,17 * *
+- as: vsphere-ipi-compact-f28-destructive
+  cron: 44 16 19 * *
+  steps:
+    cluster_profile: vsphere-connected
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      SIZE_VARIANT: compact
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi
+- as: vsphere-ipi-disconnected-registry-pvc-f28
+  cron: 59 13 25 * *
   steps:
     cluster_profile: vsphere-dis
     env:
@@ -3389,8 +3401,20 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-disconnected-image-registry-pvc
-- as: vsphere-ipi-disk-encryption-tang-fips-f14
-  cron: 25 16 4,19 * *
+- as: vsphere-ipi-disconnected-registry-pvc-f28-destructive
+  cron: 38 13 5 * *
+  steps:
+    cluster_profile: vsphere-dis
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @disconnected and @network-ovnkubernetes
+        and not @fips and @destructive'
+      TAG_VERSION: '@4.14'
+      TEST_FILTERS: ~ChkUpgrade&;~NonPreRelease&;~Serial&;~Disruptive&;~ConnectedOnly&;~HyperShiftMGMT&;~MicroShiftOnly&
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-disconnected-image-registry-pvc
+- as: vsphere-ipi-disk-encryption-tang-fips-f28
+  cron: 1 14 16 * *
   steps:
     cluster_profile: vsphere
     env:
@@ -3399,6 +3423,17 @@ tests:
       TAG_VERSION: '@4.14'
     test:
     - chain: openshift-e2e-test-qe
+    workflow: cucushift-installer-rehearse-vsphere-ipi-disk-encryption-tang
+- as: vsphere-ipi-disk-encryption-tang-fips-f28-destructive
+  cron: 44 6 13 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and @destructive'
+      FIPS_ENABLED: "true"
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-vsphere-ipi-disk-encryption-tang
 - as: vsphere-ipi-external-lb-pre-f14
   cron: 53 0 7,22 * *
@@ -3410,8 +3445,8 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-external-lb-pre
-- as: vsphere-ipi-ovn-dualstack-f14
-  cron: 43 10 8,23 * *
+- as: vsphere-ipi-ovn-dualstack-f28
+  cron: 4 23 24 * *
   steps:
     cluster_profile: vsphere
     env:
@@ -3420,8 +3455,18 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-dualstack
-- as: vsphere-ipi-ovn-ipsec-f14
-  cron: 24 23 14,29 * *
+- as: vsphere-ipi-ovn-dualstack-f28-destructive
+  cron: 42 4 29 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      E2E_RUN_TAGS: '@vsphere-ipi and @network-ovnkubernetes and not @fips and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-dualstack
+- as: vsphere-ipi-ovn-ipsec-f28
+  cron: 36 4 19 * *
   steps:
     cluster_profile: vsphere
     env:
@@ -3430,6 +3475,17 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-ipsec
+- as: vsphere-ipi-ovn-ipsec-f28-destructive
+  cron: 21 12 5 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-ipsec
 - as: vsphere-ipi-ovn-local-to-shared-gateway-mode-migration-f14
   cron: 35 0 8,23 * *
   steps:
@@ -3437,8 +3493,8 @@ tests:
     test:
     - ref: cucushift-installer-check-cluster-health
     workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-local-to-shared-gateway-mode-migration
-- as: vsphere-ipi-ovn-shared-to-local-gateway-mode-migration-f14
-  cron: 22 19 7,22 * *
+- as: vsphere-ipi-ovn-shared-to-local-gw-migration-f28
+  cron: 14 11 6 * *
   steps:
     cluster_profile: vsphere
     env:
@@ -3447,8 +3503,19 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-shared-to-local-gateway-mode-migration
-- as: vsphere-ipi-proxy-fips-f14
-  cron: 38 11 14,29 * *
+- as: vsphere-ipi-ovn-shared-to-local-gw-migration-f28-destructive
+  cron: 36 6 6 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-shared-to-local-gateway-mode-migration
+- as: vsphere-ipi-proxy-fips-f28
+  cron: 37 3 9 * *
   steps:
     cluster_profile: vsphere-dis
     env:
@@ -3457,6 +3524,17 @@ tests:
       TAG_VERSION: '@4.14'
     test:
     - chain: openshift-e2e-test-qe
+    workflow: cucushift-installer-rehearse-vsphere-ipi-proxy
+- as: vsphere-ipi-proxy-fips-f28-destructive
+  cron: 44 21 9 * *
+  steps:
+    cluster_profile: vsphere-dis
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @proxy and @network-ovnkubernetes
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-vsphere-ipi-proxy
 - as: vsphere-ipi-proxy-tp-f28
   cron: 24 13 16 * *
@@ -3470,8 +3548,20 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-proxy
-- as: vsphere-ipi-proxy-workers-rhel8-f14
-  cron: 1 21 3,18 * *
+- as: vsphere-ipi-proxy-tp-f28-destructive
+  cron: 51 9 25 * *
+  steps:
+    cluster_profile: vsphere-dis
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @proxy and @network-ovnkubernetes
+        and not @fips and @destructive'
+      FEATURE_SET: TechPreviewNoUpgrade
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-proxy
+- as: vsphere-ipi-proxy-workers-rhel8-f28
+  cron: 47 1 30 * *
   steps:
     cluster_profile: vsphere-dis
     env:
@@ -3481,8 +3571,19 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-proxy-workers-rhel8
-- as: vsphere-ipi-remote-worker-f14
-  cron: 11 11 5,20 * *
+- as: vsphere-ipi-proxy-workers-rhel8-f28-destructive
+  cron: 45 14 10 * *
+  steps:
+    cluster_profile: vsphere-dis
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @proxy and @network-ovnkubernetes
+        and not @fips and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-proxy-workers-rhel8
+- as: vsphere-ipi-remote-worker-f28
+  cron: 1 19 8 * *
   steps:
     cluster_profile: vsphere-connected
     env:
@@ -3491,8 +3592,19 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-remote-worker
-- as: vsphere-ipi-sdn-f14
-  cron: 57 21 10,25 * *
+- as: vsphere-ipi-remote-worker-f28-destructive
+  cron: 12 11 22 * *
+  steps:
+    cluster_profile: vsphere-connected
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-remote-worker
+- as: vsphere-ipi-sdn-f28
+  cron: 34 14 16 * *
   steps:
     cluster_profile: vsphere-connected
     env:
@@ -3500,6 +3612,17 @@ tests:
       TAG_VERSION: '@4.14'
     test:
     - chain: openshift-e2e-test-qe
+    workflow: cucushift-installer-rehearse-vsphere-ipi-sdn
+- as: vsphere-ipi-sdn-f28-destructive
+  cron: 46 10 15 * *
+  steps:
+    cluster_profile: vsphere-connected
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-openshiftsdn and not @fips
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-vsphere-ipi-sdn
 - as: vsphere-ipi-sdn-migration-ovn-f14
   cron: 19 1 10,25 * *
@@ -3513,8 +3636,8 @@ tests:
     test:
     - chain: cucushift-sdn-migration-ovn
     workflow: cucushift-installer-rehearse-vsphere-ipi-sdn
-- as: vsphere-ipi-static-ip-tp-f14
-  cron: 25 23 5,20 * *
+- as: vsphere-ipi-static-ip-tp-f28
+  cron: 1 21 6 * *
   steps:
     cluster_profile: vsphere-connected
     env:
@@ -3524,8 +3647,20 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-static-ip
-- as: vsphere-ipi-template-f14
-  cron: 34 22 4,19 * *
+- as: vsphere-ipi-static-ip-tp-f28-destructive
+  cron: 21 1 26 * *
+  steps:
+    cluster_profile: vsphere-connected
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      FEATURE_SET: TechPreviewNoUpgrade
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-static-ip
+- as: vsphere-ipi-template-f28
+  cron: 36 8 24 * *
   steps:
     cluster_profile: vsphere-connected
     env:
@@ -3534,8 +3669,19 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-template
-- as: vsphere-ipi-zones-f14
-  cron: 25 1 6,21 * *
+- as: vsphere-ipi-template-f28-destructive
+  cron: 34 11 26 * *
+  steps:
+    cluster_profile: vsphere-connected
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-ipi-template
+- as: vsphere-ipi-zones-f28
+  cron: 8 11 12 * *
   steps:
     cluster_profile: vsphere-multizone
     env:
@@ -3543,6 +3689,17 @@ tests:
       TAG_VERSION: '@4.14'
     test:
     - chain: openshift-e2e-test-qe
+    workflow: cucushift-installer-rehearse-vsphere-ipi-zones
+- as: vsphere-ipi-zones-f28-destructive
+  cron: 25 4 20 * *
+  steps:
+    cluster_profile: vsphere-multizone
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-vsphere-ipi-zones
 - as: vsphere-ipi-zones-f28-long-duration-cloud
   cron: 17 19 30 * *
@@ -3557,8 +3714,8 @@ tests:
     test:
     - chain: openshift-e2e-test-qe-long-duration
     workflow: cucushift-installer-rehearse-vsphere-ipi-zones
-- as: vsphere-upi-disconnected-sdn-workers-rhcos-rhel8-f14
-  cron: 8 20 10,25 * *
+- as: vsphere-upi-disconnected-sdn-rhcos-rhel8-f28
+  cron: 33 22 30 * *
   steps:
     cluster_profile: vsphere-dis
     env:
@@ -3569,8 +3726,20 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-upi-disconnected-sdn-workers-rhcos-rhel8
-- as: vsphere-upi-disconnected-secureboot-fips-f14
-  cron: 53 5 13,28 * *
+- as: vsphere-upi-disconnected-sdn-rhcos-rhel8-f28-destructive
+  cron: 9 13 19 * *
+  steps:
+    cluster_profile: vsphere-dis
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @disconnected and @network-openshiftsdn
+        and not @fips and @destructive'
+      TAG_VERSION: '@4.14'
+      TEST_FILTERS: ~ChkUpgrade&;~NonPreRelease&;~Serial&;~Disruptive&;~ConnectedOnly&;~HyperShiftMGMT&;~MicroShiftOnly&
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-upi-disconnected-sdn-workers-rhcos-rhel8
+- as: vsphere-upi-disconnected-secureboot-fips-f28
+  cron: 42 17 28 * *
   steps:
     cluster_profile: vsphere-dis
     env:
@@ -3581,20 +3750,45 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-upi-disconnected-secureboot
+- as: vsphere-upi-disconnected-secureboot-fips-f28-destructive
+  cron: 35 9 9 * *
+  steps:
+    cluster_profile: vsphere-dis
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @disconnected and @network-ovnkubernetes
+        and @destructive'
+      FIPS_ENABLED: "true"
+      TAG_VERSION: '@4.14'
+      TEST_FILTERS: ~ChkUpgrade&;~NonPreRelease&;~Serial&;~Disruptive&;~ConnectedOnly&;~HyperShiftMGMT&;~MicroShiftOnly&
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-upi-disconnected-secureboot
 - as: vsphere-upi-disconnecting-network-f28
   cron: 36 14 8 * *
   steps:
     cluster_profile: vsphere-connected
     env:
-      E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @disconnected and @network-openshiftsdn
+      E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @disconnected and @network-ovnkubernetes
         and not @fips'
       TAG_VERSION: '@4.14'
       TEST_FILTERS: ~ChkUpgrade&;~NonPreRelease&;~Serial&;~Disruptive&;~ConnectedOnly&;~HyperShiftMGMT&;~MicroShiftOnly&
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-upi-disconnecting-network
-- as: vsphere-upi-encrypt-f14
-  cron: 19 17 2,17 * *
+- as: vsphere-upi-disconnecting-network-f28-destructive
+  cron: 57 8 28 * *
+  steps:
+    cluster_profile: vsphere-connected
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @disconnected and @network-ovnkubernetes
+        and not @fips and @destructive'
+      TAG_VERSION: '@4.14'
+      TEST_FILTERS: ~ChkUpgrade&;~NonPreRelease&;~Serial&;~Disruptive&;~ConnectedOnly&;~HyperShiftMGMT&;~MicroShiftOnly&
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-upi-disconnecting-network
+- as: vsphere-upi-encrypt-f28
+  cron: 7 1 17 * *
   steps:
     cluster_profile: vsphere
     env:
@@ -3603,8 +3797,19 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-upi-encrypt
-- as: vsphere-upi-platform-none-f14
-  cron: 29 17 10,25 * *
+- as: vsphere-upi-encrypt-f28-destructive
+  cron: 21 15 6 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-upi-encrypt
+- as: vsphere-upi-platform-none-f28
+  cron: 25 10 15 * *
   steps:
     cluster_profile: vsphere
     env:
@@ -3614,8 +3819,19 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-upi-platform-external
-- as: vsphere-upi-platform-external-f14
-  cron: 35 9 15,30 * *
+- as: vsphere-upi-platform-none-f28-destructive
+  cron: 39 0 15 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      E2E_RUN_TAGS: '@amd64 and @baremetal-upi and @network-ovnkubernetes and not
+        @fips and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-upi-platform-external
+- as: vsphere-upi-platform-external-f28
+  cron: 8 9 3 * *
   steps:
     cluster_profile: vsphere
     env:
@@ -3625,8 +3841,20 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-upi-platform-external
-- as: vsphere-upi-zones-f14
-  cron: 2 4 2,17 * *
+- as: vsphere-upi-platform-external-f28-destructive
+  cron: 25 18 15 * *
+  steps:
+    cluster_profile: vsphere
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      PLATFORM_NAME: vsphere
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
+    workflow: cucushift-installer-rehearse-vsphere-upi-platform-external
+- as: vsphere-upi-zones-f28
+  cron: 57 15 7 * *
   steps:
     cluster_profile: vsphere-multizone
     env:
@@ -3634,6 +3862,17 @@ tests:
       TAG_VERSION: '@4.14'
     test:
     - chain: openshift-e2e-test-qe
+    workflow: cucushift-installer-rehearse-vsphere-upi-zones
+- as: vsphere-upi-zones-f28-destructive
+  cron: 21 12 28 * *
+  steps:
+    cluster_profile: vsphere-multizone
+    env:
+      E2E_RUN_TAGS: '@amd64 and @vsphere-upi and @network-ovnkubernetes and not @fips
+        and @destructive'
+      TAG_VERSION: '@4.14'
+    test:
+    - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-vsphere-upi-zones
 - as: baremetal-compact-agent-platform-none-ipv4-static-f14
   cluster: build05
