--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__arm64-stable.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__arm64-stable.yaml
@@ -63,7 +63,6 @@ releases:
       product: ocp
       version_bounds:
         lower: 4.14.0-0
-        stream: 4-dev-preview
         upper: 4.15.0-0
   latest:
     prerelease:
@@ -71,7 +70,6 @@ releases:
       product: ocp
       version_bounds:
         lower: 4.14.0-0
-        stream: 4-dev-preview
         upper: 4.15.0-0
   target:
     candidate:
@@ -88,7 +86,7 @@ resources:
       memory: 1Gi
 tests:
 - as: aws-ipi-disconnected-private-sno-f14
-  cron: 11 20 2,17 * *
+  cron: 26 8 6,21 * *
   steps:
     cluster_profile: aws-qe
     dependencies:
@@ -103,7 +101,7 @@ tests:
     - chain: cucushift-installer-check-cluster-health
     workflow: cucushift-installer-rehearse-aws-ipi-disconnected-private-sno
 - as: aws-ipi-disconnected-sts-ep-f14
-  cron: 5 14 15,30 * *
+  cron: 43 8 6,21 * *
   steps:
     cluster_profile: aws-qe
     dependencies:
@@ -118,7 +116,7 @@ tests:
     - chain: cucushift-installer-check-cluster-health
     workflow: cucushift-installer-rehearse-aws-ipi-disconnected-private-cco-manual-security-token-service-private-s3-with-ep-sts-ec2-elb
 - as: aws-ipi-proxy-sts-f14
-  cron: 43 1 5,20 * *
+  cron: 34 13 11,26 * *
   steps:
     cluster_profile: aws-qe
     dependencies:
@@ -133,7 +131,7 @@ tests:
     - chain: cucushift-installer-check-cluster-health
     workflow: cucushift-installer-rehearse-aws-ipi-proxy-cco-manual-security-token-service
 - as: aws-ipi-usertags-f14
-  cron: 13 21 8,23 * *
+  cron: 3 3 4,19 * *
   steps:
     cluster_profile: aws-qe
     dependencies:
@@ -147,7 +145,7 @@ tests:
     - chain: cucushift-installer-check-cluster-health
     workflow: cucushift-installer-rehearse-aws-ipi-usertags
 - as: azure-ipi-disconnected-fullyprivate-f14
-  cron: 11 2 5,20 * *
+  cron: 53 5 3,18 * *
   steps:
     cluster_profile: azure-qe
     dependencies:
@@ -160,7 +158,7 @@ tests:
     - chain: cucushift-installer-check-cluster-health
     workflow: cucushift-installer-rehearse-azure-ipi-disconnected-fullyprivate
 - as: azure-ipi-fullyprivate-proxy-f14
-  cron: 35 0 14,29 * *
+  cron: 5 23 9,24 * *
   steps:
     cluster_profile: azure-qe
     dependencies:
@@ -173,7 +171,7 @@ tests:
     - chain: cucushift-installer-check-cluster-health
     workflow: cucushift-installer-rehearse-azure-ipi-fullyprivate-proxy
 - as: azure-ipi-usertags-f14
-  cron: 46 16 8,23 * *
+  cron: 35 3 1,16 * *
   steps:
     cluster_profile: azure-qe
     dependencies:
@@ -243,4 +241,4 @@ zz_generated_metadata:
   branch: release-4.14
   org: openshift
   repo: openshift-tests-private
-  variant: arm64-ec
+  variant: arm64-stable
